--- a/React/src/index.html
+++ b/React/src/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+    <noscript>
+        You need to enable JavaScript to run this application
+    </noscript>
     <div id="app"></div>
 </body>
 
