--- a/js/index.html
+++ b/js/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <script src='./generator-example.js' type="text/javascript" defer></script>
+  <script src='./prototypes.js' type="text/javascript" defer></script>
 </head>
 <body>
   
