[WIP] mutation events

--- a/js/index.html
+++ b/js/index.html
@@ -7,8 +7,9 @@
   <title>Document</title>
   <script src='./generator-example.js' type="text/javascript" defer></script>
   <script src='./prototypes.js' type="text/javascript" defer></script>
+  <script src='./mutationEvents.js' type="text/javascript" defer></script>
 </head>
 <body>
-  
+  <div id="app"></div>
 </body>
 </html>
