--- a/js/index.html
+++ b/js/index.html
@@ -8,6 +8,7 @@
   <script src='./generator-example.js' type="text/javascript" defer></script>
   <script src='./prototypes.js' type="text/javascript" defer></script>
   <script src='./mutationEvents.js' type="text/javascript" defer></script>
+  <script src='./parallelAsync.js' type="text/javascript" defer></script>
 </head>
 <body>
   <div id="app"></div>
