--- a/React + RTK todo example/src/index.html
+++ b/React + RTK todo example/src/index.html
@@ -5,6 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <style>
+    .app {
+        transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1)
+    }
+
+    .day {
+        color: green;        
+    }
+    .night {
+        color: #fff;
+        background-color: #000;
+    }
+    </style>
 </head>
 
 <body>
