--- a/js/throttleSearch/index.html
+++ b/js/throttleSearch/index.html
@@ -13,7 +13,7 @@
     <input id="he" type="text">
     <div id="out"></div>
   </div>
-  <script src='./script.js'></script>
+  <script type="module" src='/script.js'></script>
 </body>
 
 </html>
