--- a/js/stream recorder 5 sec/index.html
+++ b/js/stream recorder 5 sec/index.html
@@ -11,6 +11,9 @@
     <video id="video" autoplay muted></video>
     <video hidden id="preview" controls></video>
     <a href="" id="save">save</a>
+    <button id="photo-creator">get photo</button>
+    <canvas id="canvas" width="320" height="240"></canvas>
+    <img id="photo" />
   </body>
   <script>
     document.addEventListener("DOMContentLoaded", () => {
@@ -19,43 +22,50 @@
         audio: true,
       });
 
-      media
-        .then((stream) => {
-          const recoder = new MediaRecorder(stream);
-          document.getElementById("video").srcObject = stream;
-          return new Promise(
-            (resolve) =>
-              (document.getElementById("video").onplaying = () => {
-                resolve(stream);
-              })
+      media.then((stream) => {
+        document.getElementById("video").srcObject = stream;
+
+        document.getElementById("video").addEventListener("playing", () => {
+          let data = [];
+          const recorder = new MediaRecorder(stream);
+          recorder.start();
+
+          recorder.addEventListener("dataavailable", (e) => data.push(e.data));
+          recorder.addEventListener("stop", () => {
+            // data = data[0]
+            const blob = new Blob(data, { type: "video/webm" });
+
+            document.getElementById("preview").removeAttribute("hidden");
+            document.getElementById("preview").src = URL.createObjectURL(blob);
+            document.getElementById("save").href = URL.createObjectURL(blob);
+            document.getElementById("save").download = "video.webm";
+          });
+
+          setTimeout(() => {
+            recorder.stop();
+          }, 5000);
+        });
+      });
+
+      document
+        .getElementById("photo-creator")
+        .addEventListener("click", (e) => {
+          const canvas = document.getElementById("canvas");
+
+          canvas
+            .getContext("2d")
+            .drawImage(
+              document.getElementById("video"),
+              0,
+              0,
+              canvas.width,
+              canvas.height
+            );
+
+          document.getElementById("photo").src = URL.createObjectURL(
+            canvas.toDataURL("image/png")
           );
-        })
-        .then(startRecording)
-        .then((data) => {
-          const blob = new Blob(data, { type: "video/webm" });
-          document.getElementById("preview").removeAttribute("hidden");
-          document.getElementById("preview").src = URL.createObjectURL(blob);
-          document.getElementById("save").href = URL.createObjectURL(blob);
-          document.getElementById("save").download = "video.webm";
         });
     });
-
-    function startRecording(stream) {
-      let recorder = new MediaRecorder(stream);
-      let data = [];
-
-      recorder.ondataavailable = (event) => data.push(event.data);
-      recorder.start();
-
-      return new Promise((resolve) => {
-        recorder.onstop = () => {
-          resolve(data);
-        };
-
-        setTimeout(() => {
-          recorder.stop();
-        }, 5000);
-      });
-    }
   </script>
 </html>
